# crypto_trader

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.backend  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/trading_platform/: __init__.py  cli.py  config.py
backend/src/trading_platform/adapters/bitunix/: __init__.py  market_data.py  rest.py  signing.py  ws.py
backend/src/trading_platform/adapters/execution/: __init__.py  backtest.py  dry_run.py  live.py  simulated.py
backend/src/trading_platform/adapters/persistence/: __init__.py  broadcast_emitter.py  db_writer.py  kafka_emitter.py  models.py
backend/src/trading_platform/api/: app.py  deps.py  schemas.py  ws_app.py
backend/src/trading_platform/api/routes/: backtests.py  config.py  control.py  history.py  strategies.py
backend/src/trading_platform/core/: __init__.py  clock.py  crypto.py  enums.py  ledger.py  models.py  ports.py
backend/src/trading_platform/engine/: config_cache.py  realtime_hub.py  reconciliation.py  redis_cache.py  runner.py  state.py
backend/src/trading_platform/risk/: engine.py
backend/src/trading_platform/strategies/: base.py  registry.py
backend/src/trading_platform/strategies/adaptive_ladder/: __init__.py  discovery.py  indicators.py  strategy.py
backend/tests/: test_broadcast.py  test_engine_state.py  test_golden_backtest.py  test_indicators.py  test_ledger.py  test_reconciliation.py  test_risk.py  test_signing.py
docs/: architecture.md
frontend-analytics/: Dockerfile  index.html  package.json  (+1 more)
(+36 files in other folders)
