[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-platform"
version = "0.1.0"
description = "Bitunix futures trading platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "aiokafka>=0.12.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "cryptography>=44.0.0",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
trading-api = "trading_platform.cli:run_api"
trading-engine = "trading_platform.cli:run_engine"
trading-db-writer = "trading_platform.cli:run_db_writer"
trading-realtime-ws = "trading_platform.cli:run_realtime_ws"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_platform"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"src/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["trading_platform"]
mypy_path = "src"
